Atualizar o antlr4ts -> antlr4ng e mover a transpilação e checagem do código para um web worker

--- a/packages/ide/src/app/tab-editor/tab-editor.component.html
+++ b/packages/ide/src/app/tab-editor/tab-editor.component.html
@@ -1,32 +1,53 @@
 <ng-keyboard-shortcuts [shortcuts]="shortcuts"></ng-keyboard-shortcuts>
 
 <div class="sidebar">
-  <button mat-ripple type="button" class="sidebar-button" (click)="runCode()" [disabled]="executor.running">
+  <button
+    mat-ripple
+    type="button"
+    class="sidebar-button"
+    (click)="runCode()"
+    [disabled]="executor.running || transpiling"
+    title="Iniciar execução"
+  >
     <svg-icon src="assets/icon-start.svg"></svg-icon>
   </button>
 
-  <button mat-ripple type="button" class="sidebar-button" (click)="stopCode()" [disabled]="!executor.running">
+  <button
+    mat-ripple
+    type="button"
+    class="sidebar-button"
+    (click)="stopCode()"
+    [disabled]="!executor.running || transpiling"
+    title="Parar execução"
+  >
     <svg-icon src="assets/icon-stop.svg"></svg-icon>
   </button>
 
   <div class="sidebar-divider"></div>
 
-  <button mat-ripple type="button" class="sidebar-button" (click)="saveFile()">
+  <button mat-ripple type="button" class="sidebar-button" (click)="saveFile()" title="Salvar arquivo">
     <svg-icon src="assets/icon-file-save.svg"></svg-icon>
   </button>
 
-  <button mat-ripple type="button" class="sidebar-button" (click)="fileInput.click()">
+  <button mat-ripple type="button" class="sidebar-button" (click)="fileInput.click()" title="Abrir arquivo">
     <svg-icon src="assets/icon-file-open.svg"></svg-icon>
     <input #fileInput type="file" hidden accept=".por,text/plain" (change)="openFile($event)" />
   </button>
 
-  <button [disabled]="sharing" mat-ripple type="button" class="sidebar-button" (click)="shareFile()">
+  <button
+    [disabled]="sharing"
+    mat-ripple
+    type="button"
+    class="sidebar-button"
+    (click)="shareFile()"
+    title="Compartilhar código"
+  >
     <svg-icon src="assets/icon-share.svg"></svg-icon>
   </button>
 
   <div class="sidebar-divider"></div>
 
-  <button mat-ripple type="button" class="sidebar-button" (click)="openHelp()">
+  <button mat-ripple type="button" class="sidebar-button" (click)="openHelp()" title="Abrir seção de Ajuda">
     <svg-icon src="assets/icon-help-circle-outline.svg"></svg-icon>
   </button>
 </div>
@@ -63,7 +84,9 @@
 <ng-template #shareSnackTemplate let-data>
   <span class="share-snack">
     <strong>Link gerado:</strong>&nbsp;&nbsp;<code>
-      <a target="_blank" [href]="data.url">{{ data.url | slice: 0:10 }}…{{ data.url | slice: data.url.length - 14 }}</a>
+      <a target="_blank" [href]="data.url"
+        >{{ data.url | slice: 0 : 10 }}…{{ data.url | slice: data.url.length - 14 }}</a
+      >
     </code>
     &nbsp;&nbsp;&nbsp;
     <button mat-raised-button color="primary" (click)="copyStringAndCloseSnack(data.url)">COPIAR</button>
