--- a/packages/ide/src/app/tab-help/tab-help.component.html
+++ b/packages/ide/src/app/tab-help/tab-help.component.html
@@ -9,7 +9,7 @@
       <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
         <mat-tree-node *matTreeNodeDef="let node">
           <li mat-ripple (click)="loadItem(node)" [class.active]="current?.id === node.id">
-            <button mat-icon-button disabled>
+            <button mat-icon-button disabled title="Ícone de pasta">
               <mat-icon></mat-icon>
             </button>
             <span>{{ node.text }}</span>
