Permitir interromper a transpilação do código

--- a/packages/ide/src/app/tab-editor/tab-editor.component.html
+++ b/packages/ide/src/app/tab-editor/tab-editor.component.html
@@ -17,7 +17,7 @@
     type="button"
     class="sidebar-button"
     (click)="stopCode()"
-    [disabled]="!executor.running || transpiling"
+    [disabled]="!executor.running && !transpiling"
     title="Parar execução"
   >
     <svg-icon src="assets/icon-stop.svg"></svg-icon>
