Experimento com o Google Ads

--- a/packages/ide/src/app/tab-start/tab-start.component.html
+++ b/packages/ide/src/app/tab-start/tab-start.component.html
@@ -61,18 +61,31 @@
 <section class="info">
   <p>
     <strong>Nova versão:</strong> Podem existir problemas, caso encontre algum ou tenha sugestões/comentários,
-    <a href="https://github.com/dgadelha/Portugol-Webstudio/discussions/categories/ideas" target="_blank" rel="external noopener">
-      nos envie por aqui, estamos sempre acompanhando</a
+    <a
+      href="https://github.com/dgadelha/Portugol-Webstudio/discussions/categories/ideas"
+      target="_blank"
+      rel="external noopener"
+    >
+      nos envie por aqui, estamos sempre acompanhando </a
     >.
   </p>
 
   <hr />
 
   <h4>📰&nbsp;&nbsp;Novidades</h4>
+  <p><strong>09/03/2024:</strong> Novo domínio: <strong>portugol.dev</strong> e experimento com propagandas</p>
   <p><strong>08/03/2024:</strong> Melhorias de performance na interface da plataforma</p>
   <p><strong>17/01/2024:</strong> Melhorias nas verificações de erros (comparação lógica e bibliotecas)</p>
-  <p><strong>26/12/2023:</strong> Melhorias nas verificações de erros (escopos e tipos)</p>
 </section>
+
+<ins
+  class="adsbygoogle"
+  style="display: block"
+  data-ad-client="ca-pub-6982662106665437"
+  data-ad-slot="2779773599"
+  data-ad-format="auto"
+  data-full-width-responsive="true"
+></ins>
 
 <footer>
   <summary>Versão: <span matTooltip="%DATE%">%COMMIT_SHA%</span></summary>
