--- a/packages/ide/src/app/tab-editor/tab-editor.component.html
+++ b/packages/ide/src/app/tab-editor/tab-editor.component.html
@@ -81,6 +81,15 @@
   </as-split>
 </div>
 
+<ins
+  class="adsbygoogle"
+  style="display: block"
+  data-ad-client="ca-pub-6982662106665437"
+  data-ad-slot="2779773599"
+  data-ad-format="auto"
+  data-full-width-responsive="true"
+></ins>
+
 <ng-template #shareSnackTemplate let-data>
   <span class="share-snack">
     <strong>Link gerado:</strong>&nbsp;&nbsp;<code>
