Ajustar links da home

--- a/packages/ide/src/app/tab-start/tab-start.component.html
+++ b/packages/ide/src/app/tab-start/tab-start.component.html
@@ -36,7 +36,7 @@
   </button>
 
   <a
-    href="https://github.com/dgadelha/Portugol-Webstudio/discussions/categories/ideas"
+    href="https://github.com/dgadelha/Portugol-Webstudio/discussions/categories/ideias-e-sugest%C3%B5es"
     target="_blank"
     rel="external noreferrer noopener nofollow"
     mat-ripple
@@ -62,11 +62,11 @@
   <p>
     <strong>Nova versão:</strong> Podem existir problemas, caso encontre algum ou tenha sugestões/comentários,
     <a
-      href="https://github.com/dgadelha/Portugol-Webstudio/discussions/categories/ideas"
+      href="https://github.com/dgadelha/Portugol-Webstudio/issues/new/choose"
       target="_blank"
       rel="external noopener"
     >
-      nos envie por aqui, estamos sempre acompanhando </a
+      nos envie por aqui, estamos sempre acompanhando</a
     >.
   </p>
 
