--- a/packages/ide/src/app/tab-editor/tab-editor.component.scss
+++ b/packages/ide/src/app/tab-editor/tab-editor.component.scss
@@ -63,7 +63,8 @@
   }
 }
 
-.sidebar-button svg {
+.sidebar-button svg,
+.sidebar-button svg-icon {
   width: 1.5rem;
   height: 1.5rem;
   fill: currentColor;
