--- a/packages/ide/src/app/app.component.html
+++ b/packages/ide/src/app/app.component.html
@@ -14,11 +14,9 @@
   <mat-tab>
     <ng-template mat-tab-label>
       <span class="tab-icon">
-        <img
-          src="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/ide/src/main/resources/br/univali/ps/ui/icones/Dark/pequeno/light_pix.png"
-          alt="Ícone do Portugol"
-        />
+        <svg-icon src="assets/lightbulb.svg" svgClass="text-primary cap-my-height" svgAriaLabel="Ícone do Portugol" />
       </span>
+
       <span class="tab-text">Portugol Webstudio</span>
     </ng-template>
 
@@ -29,25 +27,37 @@
     <ng-template mat-tab-label>
       <span>
         <span class="tab-icon" [ngSwitch]="tab.type">
-          <svg-icon *ngSwitchCase="'editor'" src="assets/icon-file.svg"></svg-icon>
-          <svg-icon *ngSwitchCase="'help'" src="assets/icon-help-circle-outline.svg"></svg-icon>
+          <svg-icon *ngSwitchCase="'editor'" src="assets/mdi/file.svg" svgAriaLabel="Ícone de arquivo" />
+          <svg-icon
+            *ngSwitchCase="'help'"
+            src="assets/mdi/help-circle-outline.svg"
+            svgClass="text-quaternary"
+            svgAriaLabel="Ícone de ajuda"
+          />
         </span>
 
         <span class="tab-text">{{ tab.title }}</span>
       </span>
 
       <span class="tab-actions">
-        <button mat-icon-button matTooltip="Renomear aba" (click)="changeTabTitle(tab)" *ngIf="tab.type === 'editor'">
-          <mat-icon>drive_file_rename_outline</mat-icon>
+        <button
+          mat-icon-button
+          aria-label="Renomear aba"
+          matTooltip="Renomear aba"
+          (click)="changeTabTitle(tab)"
+          *ngIf="tab.type === 'editor'"
+        >
+          <svg-icon src="assets/mdi/rename-outline.svg" svgAriaLabel="Ícone de renomear aba" />
         </button>
 
         <button
           mat-icon-button
+          aria-label="Fechar aba"
           matTooltip="Fechar aba"
           (click)="closeTab(tab)"
           [style]="tab.type === 'editor' ? { marginLeft: 0 } : {}"
         >
-          <mat-icon>close</mat-icon>
+          <svg-icon src="assets/mdi/close.svg" svgAriaLabel="Ícone de fechar aba" />
         </button>
       </span>
     </ng-template>
@@ -66,8 +76,14 @@
 
   <mat-tab disabled>
     <ng-template mat-tab-label class="tab-add">
-      <button class="add-button" mat-icon-button matTooltip="Nova aba de editor de código" (click)="addTab()">
-        <mat-icon>add</mat-icon>
+      <button
+        class="add-button"
+        mat-icon-button
+        aria-label="Nova aba de editor de código"
+        matTooltip="Nova aba de editor de código"
+        (click)="addTab()"
+      >
+        <svg-icon src="assets/mdi/plus.svg" svgAriaLabel="Ícone de adicionar aba" />
       </button>
     </ng-template>
   </mat-tab>
