--- a/packages/ide/src/app/dialog-open-example/dialog-open-example.component.html
+++ b/packages/ide/src/app/dialog-open-example/dialog-open-example.component.html
@@ -1,7 +1,9 @@
 <header mat-dialog-title>
   <span>Abrir Exemplo…</span>
   <s></s>
-  <button tabindex="-1" mat-dialog-close mat-icon-button><mat-icon>close</mat-icon></button>
+  <button tabindex="-1" mat-dialog-close mat-icon-button aria-label="Fechar diálogo">
+    <svg-icon src="assets/mdi/close.svg" svgAriaLabel="Ícone de fechar diálogo" />
+  </button>
 </header>
 
 <main mat-dialog-content [ngSwitch]="loading">
@@ -14,7 +16,7 @@
             <mat-tree-node *matTreeNodeDef="let node">
               <li mat-ripple (click)="loadItem(node)" [class.active]="current?.id === node.id">
                 <button mat-icon-button disabled title="Expandir/retrair">
-                  <mat-icon></mat-icon>
+                  <svg-icon />
                 </button>
                 <span>{{ node.name }}</span>
               </li>
@@ -22,10 +24,24 @@
 
             <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChildren">
               <li matTreeNodeToggle>
-                <button tabindex="-1" mat-icon-button matTreeNodeToggle>
-                  <mat-icon class="mat-icon-rtl-mirror">
-                    {{ treeControl.isExpanded(node) ? "expand_more" : "chevron_right" }}
-                  </mat-icon>
+                <button
+                  tabindex="-1"
+                  mat-icon-button
+                  matTreeNodeToggle
+                  [ngSwitch]="treeControl.isExpanded(node)"
+                  aria-label="Expandir/retrair conteúdo da pasta"
+                >
+                  <svg-icon
+                    *ngSwitchCase="true"
+                    src="assets/mdi/chevron-down.svg"
+                    svgAriaLabel="Ícone de seta para baixo indicando o conteúdo expandido"
+                  />
+
+                  <svg-icon
+                    *ngSwitchCase="false"
+                    src="assets/mdi/chevron-right.svg"
+                    svgAriaLabel="Ícone de seta para direita indicando o conteúdo recolhido"
+                  />
                 </button>
 
                 <span>{{ node.name }}</span>
