--- a/packages/ide/src/app/dialog-open-example/dialog-open-example.component.scss
+++ b/packages/ide/src/app/dialog-open-example/dialog-open-example.component.scss
@@ -36,6 +36,8 @@ ul {
   padding-left: 1rem;
   padding-right: 1rem;
   box-sizing: border-box;
+  -webkit-user-select: none;
+  -moz-user-select: none;
   user-select: none;
 
   li {
