--- a/packages/ide/src/app/tab-start/tab-start.component.scss
+++ b/packages/ide/src/app/tab-start/tab-start.component.scss
@@ -17,11 +17,24 @@
 }
 
 nav {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: 1fr;
+  gap: 0.5rem;
   align-items: center;
   justify-content: center;
+
+  @media (max-width: 576px) {
+    grid-template-columns: 1fr;
+  }
+
+  @media (min-width: 768px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  @media (min-width: 992px) {
+    grid-template-columns: repeat(4, 1fr);
+  }
 
   @media (min-width: 768px) {
     max-width: 50vw;
@@ -34,7 +47,6 @@ nav {
     align-items: center;
     justify-content: center;
     padding: 1rem;
-    margin: 0.25rem;
     background-color: $background-100;
     appearance: none;
     border: none;
@@ -45,31 +57,41 @@ nav {
     transition: all 0.2s ease;
     text-decoration: none;
     font-size: 0.85rem;
+    -webkit-user-select: none;
+    -moz-user-select: none;
     user-select: none;
+    height: 100%;
+    text-align: center;
 
     &:hover {
       background-color: tint($background-100, 15);
       color: tint($foreground-100, 15);
     }
 
+    > svg-icon,
     > img {
       margin-bottom: 1rem;
-      max-width: 2rem;
+      width: 2.5rem;
+      height: 2.5rem;
     }
   }
 }
 
 section {
   max-width: 600px;
-  margin: 20px;
+  margin: 2rem;
   letter-spacing: 0.25px;
-  padding: 0 15px;
+  padding: 0.25rem 1rem;
   font-family: "Lato", sans-serif;
+  font-size: 0.95rem;
   color: #fff;
   border: 1px solid rgba(30, 30, 30, 0.1);
-  border-radius: 15px;
-  box-shadow: 0.3px 0.5px 0.7px hsl(200deg 54% 2% / 0.36), 0.8px 1.6px 2px -0.8px hsl(200deg 54% 2% / 0.36),
-    2.1px 4.1px 5.2px -1.7px hsl(200deg 54% 2% / 0.36), 5px 10px 12.6px -2.5px hsl(200deg 54% 2% / 0.36);
+  border-radius: 0.75rem;
+  box-shadow:
+    0.3px 0.5px 0.7px hsl(200deg 54% 2% / 0.36),
+    0.8px 1.6px 2px -0.8px hsl(200deg 54% 2% / 0.36),
+    2.1px 4.1px 5.2px -1.7px hsl(200deg 54% 2% / 0.36),
+    5px 10px 12.6px -2.5px hsl(200deg 54% 2% / 0.36);
 
   h3,
   h4,
@@ -78,16 +100,28 @@ section {
     margin: 0.5rem 0;
     line-height: 1.5;
     list-style-type: square;
+
+    svg-icon,
+    svg {
+      width: 1.25rem;
+      height: 1.25rem;
+    }
+
+    svg {
+      vertical-align: top;
+    }
+  }
+
+  h4 {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    font-size: 1rem;
   }
 
   ul {
     margin: 0;
     padding-left: 1.25rem;
-  }
-
-  mat-icon {
-    vertical-align: -5px;
-    margin-right: 7.5px;
   }
 
   a {
@@ -114,6 +148,8 @@ footer {
   position: absolute;
   bottom: 10px;
   left: 10px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
   user-select: none;
 
   summary {
