--- a/packages/ide/src/app/tab-start/tab-start.component.html
+++ b/packages/ide/src/app/tab-start/tab-start.component.html
@@ -94,7 +94,11 @@
 
 <section class="info">
   <h4><svg-icon src="assets/mdi/newspaper.svg" svgAriaLabel="Ícone de jornal para notícias" />Novidades</h4>
-  <p><strong>30/04/2024:</strong> Melhorias de acessibilidade e ajustes na tela inicial e ícones</p>
+  <p><strong>30/04/2024:</strong></p>
+  <ul>
+    <li>Melhorias de acessibilidade e ajustes na tela inicial e ícones</li>
+    <li>Correção nas verificações de erros relacionados a escopo e tipos</li>
+  </ul>
   <p><strong>10/03/2024:</strong> Otimização de desempenho na análise semântica</p>
   <p><strong>09/03/2024:</strong> Novo domínio: <strong>portugol.dev</strong> e experimento com propagandas</p>
 </section>
