--- a/packages/ide/src/app/tab-start/tab-start.component.html
+++ b/packages/ide/src/app/tab-start/tab-start.component.html
@@ -98,6 +98,7 @@
   <ul>
     <li>Melhorias de acessibilidade e ajustes na tela inicial e ícones</li>
     <li>Correção nas verificações de erros relacionados a escopo e tipos</li>
+    <li>Melhorias na experiência de erros e de estabilidade no geral</li>
   </ul>
   <p><strong>10/03/2024:</strong> Otimização de desempenho na análise semântica</p>
   <p><strong>09/03/2024:</strong> Novo domínio: <strong>portugol.dev</strong> e experimento com propagandas</p>
