--- a/packages/ide/src/app/tab-start/tab-start.component.html
+++ b/packages/ide/src/app/tab-start/tab-start.component.html
@@ -94,6 +94,7 @@
 
 <section class="info">
   <h4><svg-icon src="assets/mdi/newspaper.svg" svgAriaLabel="Ícone de jornal para notícias" />Novidades</h4>
+  <p><strong>01/05/2024:</strong> Correção de retorno em função vazia</p>
   <p><strong>30/04/2024:</strong></p>
   <ul>
     <li>Melhorias de acessibilidade e ajustes na tela inicial e ícones</li>
