Revert "Remover scripts de ads"
This reverts commit 6fe9853221bd2629302cf9308c7e52ad12a6ebb3.

--- a/packages/ide/src/app/tab-start/tab-start.component.html
+++ b/packages/ide/src/app/tab-start/tab-start.component.html
@@ -105,6 +105,15 @@
   <p><strong>09/03/2024:</strong> Novo domínio: <strong>portugol.dev</strong> e experimento com propagandas</p>
 </section>
 
+<ins
+  class="adsbygoogle"
+  style="display: block"
+  data-ad-client="ca-pub-6982662106665437"
+  data-ad-slot="2779773599"
+  data-ad-format="auto"
+  data-full-width-responsive="true"
+></ins>
+
 <footer>
   <summary>Versão: <span matTooltip="%DATE%">%COMMIT_SHA%</span></summary>
 </footer>
