--- a/packages/ide/src/app/tab-start/tab-start.component.html
+++ b/packages/ide/src/app/tab-start/tab-start.component.html
@@ -94,6 +94,7 @@
 
 <section class="info">
   <h4><svg-icon src="assets/mdi/newspaper.svg" svgAriaLabel="Ícone de jornal para notícias" />Novidades</h4>
+  <p><strong>02/05/2024:</strong> Portugol Webstudio como PWA: funcionamento offline</p>
   <p><strong>01/05/2024:</strong> Correção de retorno em função vazia</p>
   <p><strong>30/04/2024:</strong></p>
   <ul>
@@ -101,8 +102,6 @@
     <li>Correção nas verificações de erros relacionados a escopo e tipos</li>
     <li>Melhorias na experiência de erros e de estabilidade no geral</li>
   </ul>
-  <p><strong>10/03/2024:</strong> Otimização de desempenho na análise semântica</p>
-  <p><strong>09/03/2024:</strong> Novo domínio: <strong>portugol.dev</strong> e experimento com propagandas</p>
 </section>
 
 <ins
