--- a/packages/ide/src/app/tab-help/tab-help.component.html
+++ b/packages/ide/src/app/tab-help/tab-help.component.html
@@ -8,7 +8,13 @@
     <ul id="root">
       <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
         <mat-tree-node *matTreeNodeDef="let node">
-          <li mat-ripple (click)="loadItem(node)" [class.active]="current?.id === node.id">
+          <li
+            mat-ripple
+            (click)="loadItem(node)"
+            (keydown.enter)="loadItem(node)"
+            [class.active]="current?.id === node.id"
+            tabindex="0"
+          >
             <button mat-icon-button disabled title="Ícone de pasta">
               <svg-icon />
             </button>
@@ -17,7 +23,12 @@
         </mat-tree-node>
 
         <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChildren">
-          <li (click)="loadItem(node)" [class.active]="current?.id === node.id">
+          <li
+            (click)="loadItem(node)"
+            (keydown.enter)="loadItem(node)"
+            [class.active]="current?.id === node.id"
+            tabindex="0"
+          >
             <button
               mat-icon-button
               matTreeNodeToggle
