Corrigir funções maior_numero e menor_numero
Closes #258

--- a/packages/ide/src/app/tab-start/tab-start.component.scss
+++ b/packages/ide/src/app/tab-start/tab-start.component.scss
@@ -130,6 +130,16 @@ section {
   }
 }
 
+code {
+  font-family: "Lato", sans-serif;
+  font-size: 0.85rem;
+  border-radius: 0.25rem;
+  background-color: #2d2d2d;
+  color: #fff;
+  padding: 0.25rem 0.5rem;
+  margin: 0 0.25rem;
+}
+
 section.alert {
   background: #8c2626;
 }
