--- a/packages/ide/src/app/tab-start/tab-start.component.html
+++ b/packages/ide/src/app/tab-start/tab-start.component.html
@@ -94,14 +94,9 @@
 
 <section class="info">
   <h4><svg-icon src="assets/mdi/newspaper.svg" svgAriaLabel="Ícone de jornal para notícias" />Novidades</h4>
+  <p><strong>24/07/2024:</strong> Correção nas funções <code>maior_numero</code> e <code>menor_numero</code> da biblioteca <code>Matematica</code></p>
   <p><strong>02/05/2024:</strong> Portugol Webstudio como PWA: funcionamento offline</p>
   <p><strong>01/05/2024:</strong> Correção de retorno em função vazia</p>
-  <p><strong>30/04/2024:</strong></p>
-  <ul>
-    <li>Melhorias de acessibilidade e ajustes na tela inicial e ícones</li>
-    <li>Correção nas verificações de erros relacionados a escopo e tipos</li>
-    <li>Melhorias na experiência de erros e de estabilidade no geral</li>
-  </ul>
 </section>
 
 <footer>
