--- a/packages/ide/src/app/tab-start/tab-start.component.html
+++ b/packages/ide/src/app/tab-start/tab-start.component.html
@@ -95,6 +95,10 @@
 <section class="info">
   <h4><svg-icon src="assets/mdi/newspaper.svg" svgAriaLabel="Ícone de jornal para notícias" />Novidades</h4>
   <p>
+    <strong>13/09/2024:</strong> Melhorias no controle de abas: diálogos próprios para confirmação de renomear e fechar
+    abas
+  </p>
+  <p>
     <strong>26/07/2024:</strong> Melhorias na exibição de erros de compilação e correção de checagem de uso de função
     antes da declaração
   </p>
@@ -102,7 +106,6 @@
     <strong>24/07/2024:</strong> Correção nas funções <code>maior_numero</code> e <code>menor_numero</code> da
     biblioteca <code>Matematica</code>
   </p>
-  <p><strong>02/05/2024:</strong> Portugol Webstudio como PWA: funcionamento offline</p>
 </section>
 
 <footer>
