--- a/packages/ide/src/app/tab-start/tab-start.component.html
+++ b/packages/ide/src/app/tab-start/tab-start.component.html
@@ -96,7 +96,7 @@
   <h4><svg-icon src="assets/mdi/newspaper.svg" svgAriaLabel="Ícone de jornal para notícias" />Novidades</h4>
   <p>
     <strong>13/09/2024:</strong> Melhorias no controle de abas: diálogos próprios para confirmação de renomear e fechar
-    abas
+    abas. Ação <strong>Salvar como</strong> com opções avançadas para salvar o código.
   </p>
   <p>
     <strong>26/07/2024:</strong> Melhorias na exibição de erros de compilação e correção de checagem de uso de função
