--- a/packages/ide/src/app/tab-start/tab-start.component.html
+++ b/packages/ide/src/app/tab-start/tab-start.component.html
@@ -94,6 +94,7 @@
 
 <section class="info">
   <h4><svg-icon src="assets/mdi/newspaper.svg" svgAriaLabel="Ícone de jornal para notícias" />Novidades</h4>
+  <p><strong>XX/09/2024:</strong> Novo modo de salvar arquivos sem manter compatibilidade com o Portugol Studio.</p>
   <p>
     <strong>13/09/2024:</strong> Melhorias no controle de abas: diálogos próprios para confirmação de renomear e fechar
     abas. Ação <strong>Salvar como</strong> com opções avançadas para salvar o código.
