--- a/packages/ide/src/app/tab-start/tab-start.component.html
+++ b/packages/ide/src/app/tab-start/tab-start.component.html
@@ -95,7 +95,7 @@
 <section class="info">
   <h4><svg-icon src="assets/mdi/newspaper.svg" svgAriaLabel="Ícone de jornal para notícias" />Novidades</h4>
   <p>
-    <strong>XX/09/2024:</strong> Novo modo de salvar arquivos sem manter compatibilidade com o Portugol Studio.
+    <strong>22/09/2024:</strong> Novo modo de salvar arquivos sem manter compatibilidade com o Portugol Studio.
     Alteração do comportamento de atualizações do PWA.
   </p>
   <p>
@@ -105,10 +105,6 @@
   <p>
     <strong>26/07/2024:</strong> Melhorias na exibição de erros de compilação e correção de checagem de uso de função
     antes da declaração
-  </p>
-  <p>
-    <strong>24/07/2024:</strong> Correção nas funções <code>maior_numero</code> e <code>menor_numero</code> da
-    biblioteca <code>Matematica</code>
   </p>
 </section>
 
