--- a/packages/ide/src/app/tab-start/tab-start.component.html
+++ b/packages/ide/src/app/tab-start/tab-start.component.html
@@ -95,16 +95,16 @@
 <section class="info">
   <h4><svg-icon src="assets/mdi/newspaper.svg" svgAriaLabel="Ícone de jornal para notícias" />Novidades</h4>
   <p>
+    <strong>23/09/2024:</strong> Ajuste na fonte da seção Ajuda para estar disponível offline, mantendo uma boa
+    experiência sem depender de conexão com a internet.
+  </p>
+  <p>
     <strong>22/09/2024:</strong> Novo modo de salvar arquivos sem manter compatibilidade com o Portugol Studio.
     Alteração do comportamento de atualizações do PWA.
   </p>
   <p>
     <strong>13/09/2024:</strong> Melhorias no controle de abas: diálogos próprios para confirmação de renomear e fechar
     abas. Ação <strong>Salvar como</strong> com opções avançadas para salvar o código.
-  </p>
-  <p>
-    <strong>26/07/2024:</strong> Melhorias na exibição de erros de compilação e correção de checagem de uso de função
-    antes da declaração
   </p>
 </section>
 
