--- a/packages/ide/src/app/tab-editor/tab-editor.component.scss
+++ b/packages/ide/src/app/tab-editor/tab-editor.component.scss
@@ -1,5 +1,5 @@
-@import "variables";
-@import "utils";
+@use "variables";
+@use "utils";
 
 :host {
   display: flex;
@@ -17,7 +17,7 @@
 }
 
 .editor-inner {
-  background-color: shade($background-200, 15);
+  background-color: shade(variables.$background-200, 15);
   flex-grow: 1;
   display: flex;
 
@@ -42,14 +42,14 @@
   align-items: center;
   justify-content: center;
   padding: 1rem;
-  background-color: $background-200;
-  color: $foreground-200;
+  background-color: variables.$background-200;
+  color: variables.$foreground-200;
   border: none;
   transition: all 0.2s ease;
   cursor: pointer;
 
   &:hover:not(:disabled) {
-    background-color: tint($background-200, 7);
+    background-color: tint(variables.$background-200, 7);
   }
 
   &:disabled {
@@ -75,7 +75,7 @@
   margin-bottom: 0.5rem;
   width: 100%;
   height: 1px;
-  background-color: $background-300;
+  background-color: variables.$background-300;
 }
 
 ::ng-deep #output {
